<resources>
    <string name="app_name">APP AUM</string>
    <string name="perfil_usuario">Perfil de Usuário</string>
    <string name="menu_perfil_usuario">Perfil</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="hint_pesquisar">Digite o argumento e pesquise</string>
    <string name="crie_sua_conta_gratis">Crie sua conta grátis</string>
    <string name="email">Email</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="termos_de_uso">Termos de uso</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="usuario_comum">Usuário Comum</string>
    <string name="usuario_com_tea">Usuário com TEA</string>
    <string name="usuario_idoso">Usuário Idoso</string>
    <string name="usuario_surdo_e_mudo">Usuário com Perda Auditiva</string>
    <string name="usuario_com_perda_de_visao_reduzida">Usuário com Perda de Visão/Reduzida</string>
    <string name="junte_se_a_outros">Junte-se a milhares de pessoas \n de pessoas e comece já</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="ja_tenho_conta">Já tenho conta</string>
    <string name="entrar">Entrar</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="esqueci_minha_senha">Esqueci minha senha</string>
    <string name="nome_comercial">Nome Comercial</string>
    <string name="fabricante_ou_laboratorio">Fabricante ou Laboratório</string>
    <string name="principios_ativos">Principios Ativos</string>
    <string name="ativo">Ativo</string>
    <string name="exemplo_nome_comercial">Trok N</string>
    <string name="doses_administradas_por_dia">Doses por Dia</string>
    <string name="doses_do_medicamento">Doses do Medicamento</string>
    <string name="exemplo_fabricante">Eurofarma</string>
    <string name="via_administracao">Via de Administração</string>
    <string name="informacoes_complementares">Informações Complementares</string>
    <string name="apelido_medicamento">Apelido do Medicamento</string>
    <string name="click_aqui">Click aqui para\nSelecionar a COR</string>
    <string name="horarios">Horários</string>
    <string name="Estoque">Estoque</string>
    <string name="registro_horarios">Registro de Horário</string>
    <string name="detalhes">Detalhes</string>
    <string name="inicio_administracao">Inicio da Administração</string>
    <string name="horario_primeira_dose">Horário da Primeira Dose</string>
    <string name="intervalo">Intervalo</string>
    <string name="selecione_intervalo">Selecione um intervalo</string>
    <string name="exemplo_doses_administrada">2</string>
    <string name="qtde_embalagem">Qtde Embalagem</string>
    <string name="exemplo_qtde_medicamento">30</string>
    <string name="exemplo_hora_inicio">08:00</string>
    <string name="Botao_Confirmar_Registro_Medicamento">Confirmar Registro de Medicamento</string>
    <string name="confirmar">Confirmar</string>
    <string name="qtde_por_dose">Qtde Por Dose</string>
    <string name="exemplo_qtde_por_dose">1</string>
    <string name="exemplo_nome_fabricante">Medley</string>
    <string name="exemplo_nome_fantasia">Remedio do Coração</string>
    <string name="status_de_consulta">Status de Consulta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="alterar">Alterar</string>
    <string name="utilizar">Utilizar</string>
    <string name="somar">Somar</string>
    <string name="Diminuir">Diminuir</string>
    <string name="alarmes">Alarmes</string>
    <string name="data_hora">Data/Hora</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saida</string>
    <string name="saldo">Saldo</string>
    <string name="exemplo_data_hora">01/12/2022</string>
    <string name="exemplo_qtde">80</string>
    <string name="lista_vazia">A lista de medicamentos está vazia aproveite para incluir o primeiro</string>
    <string name="botao_inclusao_medicamento">Inclusão de Medicamento</string>
    <string name="incluir_horarios">Incluir Horários</string>
    <string name="abas_visualizacao_pagina">Abas da Visualizacao Página</string>
    <string name="mascara_senha">nXha@89722</string>
    <string name="nova_consulta">Nova Consulta</string>
    <string name="capturar_dados">Capturar Dados</string>
    <string name="identificacao_medicamento">Identificação do Medicamento</string>
    <string name="exemplo_principio_ativo">cetoconazol + dipropionato de betametasona + sulfato de neomicina</string>
    <string name="forma_apresentacao">Forma de Apresentação</string>
    <string name="exemplo_forma_apresentacao">Creme 20,0 mg/g + 0,64 mg/g + 2,5 mg/g: embalagens com 1 bisnaga contendo 10 ou 30 g.</string>
    <string name="exemplo_via_administracao">USO DERMATOLÓGICO</string>
    <string name="publico_alvo">Publico Alvo</string>
    <string name="exemplo_publico_alvo">USO ADULTO E PEDIÁTRICO</string>
    <string name="composicao">Composição</string>
    <string name="exemplo_composicao">texto composicao</string>
    <string name="informacoes_paciente">Informações ao Paciente</string>
    <string name="texto_para_que_indicado">PARA QUE ESTE MEDICAMENTO É INDICADO?</string>
    <string name="exemplo_texto_para_que_indicado">texto para que este medicamento é indicado</string>
    <string name="como_funciona">COMO ESTE MEDICAMENTO FUNCIONA?</string>
    <string name="exemplo_como_funciona">como este medicamento funciona</string>
    <string name="como_devo_usar">COMO DEVO USAR ESTE MEDICAMENTO?</string>
    <string name="exemplo_como_usar">Antes do uso, bata levemente a bisnaga em superfície plana e macia com a tampa virada para cima, para que o conteúdo</string>
    <string name="se_esquecer">O QUE DEVO FAZER QUANDO EU ME ESQUECER DE USAR ESTE MEDICAMENTO?</string>
    <string name="exemplo_se_esquecer">Retomar o tratamento até o alívio dos sinais e sintomas da doença. Em caso de dúvidas, procure orientação do farmacêutico ou de seu médico, ou cirurgião-dentista</string>
    <string name="abas_detalhe">Abas do Detalhe</string>
    <string name="estoque">Estoque</string>
    <string name="entrada_no_estoque">Entrada no Estoque</string>
    <string name="saida_do_estoque">Saída do Estoque</string>
    <string name="valor_zero">0</string>
    <string name="medicamentos_cadastrados">Cadastrados</string>
    <string name="horario_vencido">Horário Vencido</string>
    <string name="exemplo_intervalo">08 horas</string>
    <string name="organizador_espacos1">Organizador de Espaços Número 1</string>
    <string name="organizador_espacos2">Organizador de Espaços Número 2</string>
    <string name="registro_utilizacao">Registro de Utilização</string>
    <string name="data_hora_utilizacao">Data Hora Utilização</string>
    <string name="texto_intro1">Organize seus medicamentos \n com alguns cliques</string>
    <string name="texto_intro1_parte2">Simples, fácil de usar e grátis</string>
    <string name="bem_vindo_imagem1">Bem vindo Imagem 1</string>
    <string name="bem_vindo_imagem2">Bem vindo Imagem 2</string>
    <string name="texto_intro2">Não perca o horário de tomar suas doses</string>
    <string name="texto_intro2_parte2">Seja alertado do horário e \n do número de vezes</string>
    <string name="bem_vindo_imagem3">Bem vindo Imagem 3</string>
    <string name="texto_intro3">Nunca mais esqueça de \n tomar seu medicamento</string>
    <string name="texto_intro3_parte2">Receba alertas quando quiser</string>
    <string name="bem_vindo_imagem4">Bem vindo Imagem 4</string>
    <string name="texto_intro4">Tudo organizado, no \n celular ou tablet</string>
    <string name="texto_intro4_parte2">Use no seu smartphone acessando o \n Amu pelo dispositivo Móvel</string>
    <string name="restaurar_perfil">Restaurar Perfil</string>
    <string name="menu_restaurar_perfil">Restaurar</string>
    <string name="sair">Sair</string>
    <string name="novoMedicamento">Novo Medicamento</string>
    <string name="novoHorario">Novo Horário</string>
    <string name="exemplo_qtde_cadastrados">0</string>
    <string name="exemplo_horario_vencido">0</string>
    <string name="lista_de_medicamentos_cadastrados">Lista de Medicamentos Cadastrados</string>
    <string name="area_cor_selecionada">Área da Cor</string>
    <string name="clique_na_area_nao_lado_para_escolher_numa_cor">Clique aqui para selecionar uma cor</string>
    <string name="lista_utilizacao_medicamento">Lista de Utilização de Medicamento</string>
    <string name="paleta_de_cores">Paleta de Cores</string>
    <string name="cor_2">Cor 2</string>
    <string name="cor_3">Cor 3</string>
    <string name="cor_4">Cor 4</string>
    <string name="cor_5">Cor 5</string>
    <string name="cor_6">Cor 6</string>
    <string name="cor_7">Cor 7</string>
    <string name="cor_8">Cor 8</string>
    <string name="cor_9">Cor 9</string>
    <string name="cor_10">Cor 10</string>
    <string name="cor_1">Cor 1</string>
    <string name="status_horario_sim_nao">Status Horário: SIM/NÃO</string>
</resources>