<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".activity.DetalheMedicamentoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fundo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MedicamentoActivity"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="-34dp">

        <LinearLayout
            android:id="@+id/layoutConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:textColor="@color/design_default_color_secondary_variant"
            app:layout_constraintBottom_toTopOf="@+id/textView11"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btnUtilizar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/somar"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_add_24" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="1"
                android:text="@string/Diminuir"
                android:textAllCaps="false"
                android:textSize="20sp"
                app:icon="@drawable/ic_baseline_remove_24" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/nome_comercial"
            android:textColor="#034f4f"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/txvNomeComercial"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutConfirmar" />

        <TextView
            android:id="@+id/txvNomeComercial"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/exemplo_nome_comercial"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutEstoque"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvNomeComercial">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInpTextQtdeEstoque"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estoque"
                android:inputType="number"
                android:text="@string/valor_zero" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>